--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <!-- result box -->
   <div class="result-box">
-    <div class="won-text"></div>
+    <div class="won-text">Player <p>X</p>  won the game</div>
     <div class="btn"><button>Replay</button></div>
   </div>
 
