--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Tic Tac Toe Game</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="tic tac toe.jpg">
     </head>
 
     <body>
