--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="play-board">
             <div class="details">
                 <div class="players">
-                    <span class="Xturn">X's Turn</span>
+                    <span class="Xturn ">X's Turn</span>
                     <span class="Oturn">O's Turn</span>
                     <div class="slider"></div>
                 </div>
@@ -51,7 +51,7 @@
 
         <!-- result box -->
         <div class="result-box">
-            <div class="won-text"></div>
+            <div class="won-text">Player <p>X</p> won the game!</div>
             <div class="btn"><button>Replay</button></div>
         </div>
 
