--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- result box -->
         <div class="result-box">
-            <div class="won-text">Player <p>X</p> won the game!</div>
+            <div class="won-text"></div>
             <div class="btn"><button>Replay</button></div>
         </div>
 
