--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <!-- result box -->
-        <div class="result-box">
+        <div class="result-box overlay">
             <div class="won-text"></div>
             <div class="btn"><button>Replay</button></div>
         </div>
